# hemera

./: README.md  requirements.txt  setup.cfg
data/: bad_json.json  good_path_data.json
scripts/: rsbatch.sh  spython.sh
src/hemera/: __init__.py  mlflow_utils.py  path_translator.py  push_notify.py  standard_logger.py
src/hemera/ml/: __init__.py
test/: test_path_translator.py  test_standard_logging.py
