[metadata]
name = hemera
version = 0.0.1-alpha
description = Utils for day to day code and stuff
author = Tim Cargan
Licence = Apache-2.0
url=https://github.com/timcargan/hemera
platforms = unix, linux, osx
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    hemera
install_requires =
    absl-py
    setuptools
    rich >= 12.4
python_requires = >=3.9
package_dir =
    =src
zip_safe = no